--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </section>
     
     <section class="musicas-section">
-      <h2 class="titulo-secao">Nossas Músicas Especiais</h2>
+      <h2 class="titulo-secao">Escute</h2>
       <div class="musicas-container">
         <div class="musica-card" data-id="musica1" data-src="HR4ZxjGQGYY_160.mp3">
           <img src="images/MUSICA.jpeg" alt="Duas Metades" class="musica-capa">
